--- a/package.json
+++ b/package.json
@@ -12,21 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@schematics/angular": "^0.1.10",
+    "angular2-datatable": "^0.6.0",
+    "angular2-moment": "^1.7.0",
     "core-js": "^2.4.1",
+    "date-fns": "^1.29.0",
+    "moment": "^2.19.3",
+    "ng-block-ui": "^1.0.0-beta.16",
+    "ng2-datepicker": "^2.1.6",
+    "ngx-slimscroll": "^3.5.2",
+    "ngx-toastr": "^8.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
+    "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
@@ -44,6 +55,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "bootstrap": "^3.3.7"
   }
 }
